tests/error/unbounded_static_if_recursion.c
// fail "Unexpected end to '#if'."

#if (
d
